...
                .buttonStyle(.bordered)
            }
            
            Button {
                viewModel.nextStep()
            } label: {
                Text(viewModel.currentStep == viewModel.steps.count - 1 ? (viewModel.isFromSettings ? "Done" : "Get Started") : "Continue")
                    .font(.headline)
                    .frame(maxWidth: .infinity)
                    .frame(height: 50)
            }
            .buttonStyle(.borderedProminent)
        }
...
